# bunnieverse

./: Cargo.toml
src/: api.rs  asset.rs  gui.rs  http.rs  main.css  main.rs  timeline.rs
src/model/: note.rs  user.rs
